<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />

    </FrameLayout>

    <TableLayout
        android:id="@+id/tableLayoutAlarms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/frameLayout1"
        android:layout_below="@+id/frameLayout1"
        android:layout_marginTop="42dp"
        android:stretchColumns="2" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ToggleButton
                android:id="@+id/toggleButton_onOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="40dip"
                android:text="@string/button_onOff"
                android:textOff="@string/textOff"
                android:textOn="@string/textOn" />

            <TextView
                android:id="@+id/textView_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/button_alarm"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <FrameLayout
                android:id="@+id/head_line"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_span="6"
                android:background="#0000CC" >
            </FrameLayout>
        </TableRow>
    </TableLayout>

</RelativeLayout>